--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity
             android:name=".ShowActivity"
-            android:exported="true">
+            android:exported="true"
+            android:parentActivityName=".MainActivity">
         </activity>
     </application>
 
